--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
 	}
 	.video {
 	      /* Internal borders have 1px width, thus need to add 4x 1px to 120px */
-	      height: 24px;
-	      line-height: 12px;
+	      height: 124px;
+	      line-height: 124px;
 	}
 	.thermometer, .order, .social {
 	      /* Line height to vertically center: http://phrogz.net/css/vertical-align/index.html */
 	      height: 40px;
 	      line-height: 40px;
+	}
+	div.row {
+	      border: 1px solid;
 	}
     </style>
   </head>
